# ComputaionalOpticsToolkits

./: .gitignore  README.md
DIFFRA-X/: CMakeLists.txt  config.json  post_loss.py
DIFFRA-X/include/: ASM.hpp  Annealer.hpp  Config.hpp  Controller.hpp  DiffEngine.hpp  ImageLoader.hpp  Logger.hpp  LossFunction.hpp  OptimizationEngine.hpp  PIDController.hpp  WavePropagator.hpp
DIFFRA-X/src/: ASM.cpp  Annealer.cpp  DiffEngine.cpp  ImageLoader.cpp  PIDController.cpp  main.cpp
DiffractX/: AdaptivASM.py
